--- a/src/MTRPZ4.Infrastructure/MTRPZ4.Infrastructure.csproj
+++ b/src/MTRPZ4.Infrastructure/MTRPZ4.Infrastructure.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MTRPZ4.DomainCore\MTRPZ4.CoreDomain.csproj" />
+  </ItemGroup>
+
 </Project>
