feat: add identity setup extentions
- add extantions
- use them and connect identity in Program.cs

--- a/src/MTRPZ4.UI/MTRPZ4.UI.csproj
+++ b/src/MTRPZ4.UI/MTRPZ4.UI.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MTRPZ4.Application\MTRPZ4.Application.csproj" />
+    <ProjectReference Include="..\MTRPZ4.Infrastructure\MTRPZ4.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
