--- a/src/MTRPZ4.UI/appsettings.json
+++ b/src/MTRPZ4.UI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MTRPZ4;Trusted_connection=True;"
+  }
 }
