--- a/src/MTRPZ4.UI/appsettings.json
+++ b/src/MTRPZ4.UI/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MTRPZ4;Trusted_connection=True;"
-  }
+  "AllowedHosts": "*"
 }
