--- a/MTRPZ4.Service/MTRPZ4.Service.csproj
+++ b/MTRPZ4.Service/MTRPZ4.Service.csproj
@@ -10,4 +10,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\" />
+    </ItemGroup>
+
 </Project>
