feat: move some files
- move some files to related projects to implement architecture
- raw variant that require a lot of changes

--- a/src/MTRPZ4.Infrastructure/MTRPZ4.Infrastructure.csproj
+++ b/src/MTRPZ4.Infrastructure/MTRPZ4.Infrastructure.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MTRPZ4.Application\MTRPZ4.Application.csproj" />
     <ProjectReference Include="..\MTRPZ4.DomainCore\MTRPZ4.CoreDomain.csproj" />
   </ItemGroup>
 
