--- a/src/MTRPZ4.Application/MTRPZ4.Application.csproj
+++ b/src/MTRPZ4.Application/MTRPZ4.Application.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MTRPZ4.DomainCore\MTRPZ4.CoreDomain.csproj" />
+  </ItemGroup>
+
 </Project>
