chore: change application layer for our purposes
- remove old DTO
- add several new DTO
- add one project reference

--- a/src/MTRPZ4.Application/MTRPZ4.Application.csproj
+++ b/src/MTRPZ4.Application/MTRPZ4.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MTRPZ4.DomainCore\MTRPZ4.CoreDomain.csproj" />
+    <ProjectReference Include="..\MTRPZ4.Infrastructure\MTRPZ4.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
